# Tests

./: .gitignore  .gitmodules
CMake/: CMakeLists.txt  CopyDuringInstall.cmake  HelloWorld.cmake
CMake/ExecuteParentScope/: CMakeLists.txt
CMake/SubdirectoryVar/: CMakeLists.txt
CMake/SubdirectoryVar/Subdir/: CMakeLists.txt
Cpp/: CMakeLists.txt  amalgam.cc  boolcast.cc  boosttime.cc  efibonacci.cc  heap-use-after-free.cc  helloworld.cc  iteratorstability.cc  mapmapaccess.cc  nestedvariadic.cc  readenv.cc  regex.cc  removediscordmention.cc  snowflake.cc  stringtolower.cc  stucturedMixins.cc
Cpp/Plugins/: CMakeLists.txt  plugin-goodbye.hh  plugin-hello.hh
Plugins/: hub.hh  main.cpp  plugin.hh
Python/: randtest.py
